--- a/GotifyDesktop/GotifyDesktop.csproj
+++ b/GotifyDesktop/GotifyDesktop.csproj
@@ -19,6 +19,7 @@
     <AvaloniaResource Remove="Views\MainControlView.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="README.md" />
     <None Remove="Views\AddServerView.xaml" />
     <None Remove="Views\ApplicationView.xaml" />
     <None Remove="Views\MainControlv2View.xaml" />
@@ -31,6 +32,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.2" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.2" />
     <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="3.0.0" />
+    <PackageReference Include="GotifySharp" Version="0.0.3" />
     <PackageReference Include="MessageBox.Avalonia" Version="0.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.1" />
   </ItemGroup>
@@ -53,9 +55,6 @@
     <EmbeddedResource Include="Views\MainControlv2View.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\gotifySharp\gotifySharp\gotifySharp.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="gotifySharp">
