--- a/GotifyDesktop/GotifyDesktop.csproj
+++ b/GotifyDesktop/GotifyDesktop.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <AvaloniaResource Remove="Views\AddServerView.xaml" />
+    <AvaloniaResource Remove="Views\AlertMessageView.xaml" />
     <AvaloniaResource Remove="Views\ApplicationView.xaml" />
     <AvaloniaResource Remove="Views\MainControlv2View.xaml" />
     <AvaloniaResource Remove="Views\MainControlView.xaml" />
@@ -21,20 +22,25 @@
   <ItemGroup>
     <None Remove="README.md" />
     <None Remove="Views\AddServerView.xaml" />
+    <None Remove="Views\AlertMessageView.xaml" />
     <None Remove="Views\ApplicationView.xaml" />
     <None Remove="Views\MainControlv2View.xaml" />
     <None Remove="Views\MainControlView.xaml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="AutofacSerilogIntegration" Version="2.1.0" />
     <PackageReference Include="Avalonia" Version="0.9.2" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.2" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.2" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.2" />
     <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="3.0.0" />
-    <PackageReference Include="GotifySharp" Version="0.0.3" />
+    <PackageReference Include="GotifySharp" Version="0.0.7" />
     <PackageReference Include="MessageBox.Avalonia" Version="0.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.1" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\MainControlView.xaml">
@@ -53,6 +59,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\MainControlv2View.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\AlertMessageView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
