--- a/GotifyDesktop/GotifyDesktop.csproj
+++ b/GotifyDesktop/GotifyDesktop.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
@@ -35,7 +36,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.2" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.2" />
     <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="3.0.0" />
-    <PackageReference Include="GotifySharp" Version="0.0.7" />
+    <PackageReference Include="GotifySharp" Version="0.0.8" />
     <PackageReference Include="MessageBox.Avalonia" Version="0.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />
