Cleaned up some code/Roll up commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 GotifyDesktop/bin/
 GotifyDesktop/obj/
 GotifyDesktop/GotifyDesktop.csproj.user
+GotifyDesktopUnitTests/bin
+GotifyDesktopUnitTests/obj
