UI Revampe and Sync Changes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ GotifyDesktop/obj/
 GotifyDesktop/GotifyDesktop.csproj.user
 GotifyDesktopUnitTests/bin
 GotifyDesktopUnitTests/obj
+GotifyDesktop/Properties/PublishProfiles
