--- a/GotifyDesktop/GotifyDesktop.csproj
+++ b/GotifyDesktop/GotifyDesktop.csproj
@@ -1,9 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
+  <ItemGroup>
+    <AvailableItemName Include="AvaloniaResource" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
@@ -25,18 +28,22 @@
     <None Remove="Views\AlertMessageView.xaml" />
     <None Remove="Views\ApplicationView.xaml" />
     <None Remove="Views\BusyView.xaml" />
+    <None Remove="Views\OptionsView.xaml" />
+    <None Remove="Views\SettingsView.xaml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="AutofacSerilogIntegration" Version="2.1.0" />
-    <PackageReference Include="Avalonia" Version="0.9.2" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.2" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.2" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.2" />
+    <PackageReference Include="Avalonia" Version="0.9.10" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.9.10" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.10" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.9" />
     <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="3.0.0" />
     <PackageReference Include="GotifySharp" Version="0.0.8" />
+    <PackageReference Include="mameolan.Avalonia.ExtendedToolkit" Version="1.0.0-CI-20200523-051541" />
     <PackageReference Include="MessageBox.Avalonia" Version="0.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
@@ -63,12 +70,15 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="gotifySharp">
-      <HintPath>..\..\gotifySharp\gotifySharp\bin\Release\netcoreapp3.0\gotifySharp.dll</HintPath>
+      <HintPath>..\..\gotifySharp\gotifySharp\bin\Release\netcoreapp3.1\gotifySharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Views\AddServerView.xaml.cs">
-      <DependentUpon>AddServerView.xaml</DependentUpon>
-    </Compile>
+    <AvaloniaResource Update="Views\OptionsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </AvaloniaResource>
+    <AvaloniaResource Update="Views\SettingsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </AvaloniaResource>
   </ItemGroup>
 </Project>
