--- a/GotifyDesktop/GotifyDesktop.csproj
+++ b/GotifyDesktop/GotifyDesktop.csproj
@@ -17,31 +17,17 @@
     <AvaloniaResource Include="Assets\*" />
   </ItemGroup>
   <ItemGroup>
-    <AvaloniaResource Remove="Views\AddServerView.xaml" />
-    <AvaloniaResource Remove="Views\AlertMessageView.xaml" />
-    <AvaloniaResource Remove="Views\ApplicationView.xaml" />
-    <AvaloniaResource Remove="Views\BusyView.xaml" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="README.md" />
-    <None Remove="Views\AddServerView.xaml" />
-    <None Remove="Views\AlertMessageView.xaml" />
-    <None Remove="Views\ApplicationView.xaml" />
-    <None Remove="Views\BusyView.xaml" />
-    <None Remove="Views\OptionsView.xaml" />
-    <None Remove="Views\SettingsView.xaml" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="AutofacSerilogIntegration" Version="2.1.0" />
-    <PackageReference Include="Avalonia" Version="0.9.10" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.10" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.10" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.9" />
+    <PackageReference Include="Avalonia" Version="0.10.0-preview2" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.0-preview2" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-preview2" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.0-preview2" />
     <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="3.0.0" />
     <PackageReference Include="GotifySharp" Version="0.0.8" />
+    <PackageReference Include="mameolan.Avalonia.Controlz" Version="1.0.0-CI-20200523-051541" />
     <PackageReference Include="mameolan.Avalonia.ExtendedToolkit" Version="1.0.0-CI-20200523-051541" />
-    <PackageReference Include="MessageBox.Avalonia" Version="0.9.0" />
+    <PackageReference Include="MessageBox.Avalonia" Version="0.10.0-prev1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.1" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
     <PackageReference Include="Serilog" Version="2.9.0" />
@@ -49,36 +35,12 @@
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\ApplicationView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Views\AlertMessageView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Views\AddServerView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Views\BusyView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="gotifySharp">
       <HintPath>..\..\gotifySharp\gotifySharp\bin\Release\netcoreapp3.1\gotifySharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <AvaloniaResource Update="Views\OptionsView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </AvaloniaResource>
-    <AvaloniaResource Update="Views\SettingsView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </AvaloniaResource>
+    <Folder Include="Native\MacOS\" />
+    <Folder Include="Native\Windows\" />
   </ItemGroup>
 </Project>
