--- a/GotifyDesktop/GotifyDesktop.csproj
+++ b/GotifyDesktop/GotifyDesktop.csproj
@@ -19,12 +19,11 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="AutofacSerilogIntegration" Version="2.1.0" />
-    <PackageReference Include="Avalonia" Version="0.10.0-preview2" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.0-preview2" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-preview2" />
+    <PackageReference Include="Avalonia" Version="0.10.0-preview5" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.0-preview5" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-preview5" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.0-preview2" />
     <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="3.0.0" />
-    <PackageReference Include="GotifySharp" Version="0.0.8" />
     <PackageReference Include="mameolan.Avalonia.Controlz" Version="1.0.0-CI-20200523-051541" />
     <PackageReference Include="mameolan.Avalonia.ExtendedToolkit" Version="1.0.0-CI-20200523-051541" />
     <PackageReference Include="MessageBox.Avalonia" Version="0.10.0-prev1" />
@@ -35,12 +34,10 @@
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="gotifySharp">
-      <HintPath>..\..\gotifySharp\gotifySharp\bin\Release\netcoreapp3.1\gotifySharp.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Native\MacOS\" />
     <Folder Include="Native\Windows\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\gotifySharp\gotifySharp\gotifySharp.csproj" />
   </ItemGroup>
 </Project>
